fixat så utility DATE används istället för hårdkodad input av date som string.